Wraps term groups in parens to fix logic

--- a/src/components/EventDateFilter/EventDateFilter.sass
+++ b/src/components/EventDateFilter/EventDateFilter.sass
@@ -44,7 +44,7 @@
     margin-left: -7px
 
   input
-    padding: 8px 20px 8px 0
+    padding: 8px 20px 8px 8px
     text-transform: uppercase
     background: $main-white
     border: none
